[package]
name = "dotpix"
version = "0.4.0"
authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dotpix"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
scrap = "0.5"