[package]
name = "dotpix"
version = "0.4.1"
authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dotpix"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3"

[dependencies]
neon = "0.10"
scrap = "0.5"